; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/ufs/extr_ufs-sysfs.c_ufshcd_us_to_ahit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/ufs/extr_ufs-sysfs.c_ufshcd_us_to_ahit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UFSHCI_AHIBERN8_TIMER_MASK = common dso_local global i32 0, align 4
@UFSHCI_AHIBERN8_SCALE_FACTOR = common dso_local global i32 0, align 4
@UFSHCI_AHIBERN8_SCALE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ufshcd_us_to_ahit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ufshcd_us_to_ahit(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %12, %1
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @UFSHCI_AHIBERN8_TIMER_MASK, align 4
  %7 = icmp ugt i32 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %4
  %9 = load i32, i32* @UFSHCI_AHIBERN8_SCALE_FACTOR, align 4
  %10 = load i32, i32* %2, align 4
  %11 = udiv i32 %10, %9
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %8
  %13 = load i32, i32* %3, align 4
  %14 = add i32 %13, 1
  store i32 %14, i32* %3, align 4
  br label %4

15:                                               ; preds = %4
  %16 = load i32, i32* @UFSHCI_AHIBERN8_TIMER_MASK, align 4
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @FIELD_PREP(i32 %16, i32 %17)
  %19 = load i32, i32* @UFSHCI_AHIBERN8_SCALE_MASK, align 4
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @FIELD_PREP(i32 %19, i32 %20)
  %22 = or i32 %18, %21
  ret i32 %22
}

declare dso_local i32 @FIELD_PREP(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
